<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#fff"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingTop="40dp">

            <TextView
                android:id="@+id/nickName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/nickName"
                android:textColor="#333"
                android:textStyle="bold"
                android:textSize="30sp"></TextView>

            <TextView
                android:id="@+id/signture"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingHorizontal="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/signature"
                android:textColor="#ccc"
                android:textFontWeight="500"
                android:textSize="17sp"></TextView>

            <Button
                android:id="@+id/signin"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_circle_shape"
                android:text="@string/singin"
                android:textColor="#ccc"
                android:textSize="12sp"></Button>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="20dp"
            android:src="@drawable/touxiang"></ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/orderQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:paddingHorizontal="20dp"
            android:gravity="center_vertical"
            android:text="@string/orderQuantity"
            android:textColor="#333"
            android:textSize="25sp"></TextView>

        <TextView
            android:id="@+id/queryOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|center"
            android:paddingVertical="20dp"
            android:text="@string/queryOrder"
            android:textColor="#2697f5"
            android:textSize="15sp">

        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/notification"
        style="@style/MeCellButton"
        android:text="@string/notSettings"></Button>

    <Button
        android:id="@+id/editInfo"
        style="@style/MeCellButton"
        android:text="@string/editInfo"></Button>

    <Button
        android:id="@+id/feedback"
        style="@style/MeCellButton"
        android:text="@string/feedback"></Button>

    <Button
        android:id="@+id/id"
        style="@style/MeCellButton"
        android:text="@string/id"></Button>


</LinearLayout>
